Keeping things simple.

--- a/Sorting.ipynb
+++ b/Sorting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 20, 1, 18, 12, 4, 8, 17, 14, 19, 5, 9, 3, 7, 16, 11, 2, 6, 13, 10, 15]"
+       "[19, 16, 11, 3, 10, 7, 14, 4, 5, 17, 8, 2, 20, 13, 12, 9, 18, 6, 0, 1, 15]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,6 @@
     "def quickSort(arr, l , h):\n",
     "    if h > l:\n",
     "        pivot = partition(arr, l, h)\n",
-    "        \n",
     "        quickSort(arr, pivot + 1, h)\n",
     "        quickSort(arr, l, pivot - 1)\n",
     "    return(arr)\n",
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,19 +146,19 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Find whether an array is subset of another array. For that \n",
-    "# elements must match exactlyin order when both arrays are sorted.\n",
+    "# elements must match exactly in order given both arrays are sorted.\n",
     "\n",
     "arr1 = [11,1,13,21,3,7]\n",
     "arr2 = [11,3,7,1]\n",
     "\n",
-    "# Complexity \n",
+    "# Complexity O(nlogn) + O(mlogn), with n = len(arr1), m = len(arr2)\n",
     "def isSubset(arr2, arr1):\n",
     "    arr1 = quickSort(arr1, 0, len(arr1) - 1)\n",
     "    arr2 = quickSort(arr2, 0, len(arr2) - 1)\n",
